--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
       <section>
         <h2>What are we doing</h2>
         <ul>
-          <li><img src="./images/display.jpg" alt="display" width="370" /></li>
+          <li><img src="./img/display.jpg" alt="display" width="370" /></li>
           <li>
             <img
-              src="./images/phone-display.jpg"
+              src="./img/phone-display.jpg"
               alt="phone-display"
               width="370"
             />
           </li>
-          <li><img src="./images/phone.jpg" alt="phone" width="370" /></li>
+          <li><img src="./img/phone.jpg" alt="phone" width="370" /></li>
         </ul>
       </section>
       <!-- sectiion 4  -->
@@ -89,23 +89,23 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/man.jpg" alt="man" width="370" />
+            <img src="./img/man.jpg" alt="man" width="370" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/smilingman.jpg" alt="smiling man" width="370" />
+            <img src="./img/smilingman.jpg" alt="smiling man" width="370" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/woman.jpg" alt="woman" width="370" />
+            <img src="./img/woman.jpg" alt="woman" width="370" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
-              src="./images/bearded-smiling-man.jpg"
+              src="./img/bearded-smiling-man.jpg"
               alt="bearded smiling man"
               width="370"
             />
