--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="WebStudio">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="#">Studio</a>
@@ -22,15 +22,16 @@
           </li>
         </ul>
       </nav>
-      <ul>
+      <address>
         <li>
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
+          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
         </li>
-      </ul>
+      </address>
     </header>
+
     <main>
       <!-- section 1 -->
       <section>
@@ -38,7 +39,8 @@
         <button type="button">Order Service</button>
       </section>
       <!-- section 2 -->
-      <h2 hidden>Our benefits</h2>
+      <section>
+      <h2>Our benefits</h2>
       <ul>
         <li>
           <h3>Strategy</h3>
@@ -69,6 +71,7 @@
           </p>
         </li>
       </ul>
+    </section>
       <!-- section 3 -->
       <section>
         <h2>What are we doing</h2>
@@ -116,7 +119,7 @@
       </section>
     </main>
     <footer>
-      <a href="WebStudio">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
