--- a/index.html
+++ b/index.html
@@ -23,12 +23,8 @@
         </ul>
       </nav>
       <address>
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-        </li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
       </address>
     </header>
 
@@ -40,51 +36,51 @@
       </section>
       <!-- section 2 -->
       <section>
-      <h2>Our benefits</h2>
-      <ul>
-        <li>
-          <h3>Strategy</h3>
-          <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </li>
-        <li>
-          <h3>Punctuality</h3>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </li>
-        <li>
-          <h3>Diligence</h3>
-          <p>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
-        </li>
-        <li>
-          <h3>Technologies</h3>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </li>
-      </ul>
-    </section>
+        <h2>Our benefits</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
       <!-- section 3 -->
       <section>
         <h2>What are we doing</h2>
         <ul>
-          <li><img src="./img/display.jpg" alt="display" width="360" /></li>
+          <li><img src="./images/display.jpg" alt="display" width="360" /></li>
           <li>
             <img
-              src="./img/phone-display.jpg"
+              src="./images/phone-display.jpg"
               alt="phone-display"
               width="360"
             />
           </li>
-          <li><img src="./img/phone.jpg" alt="phone" width="360" /></li>
+          <li><img src="./images/phone.jpg" alt="phone" width="360" /></li>
         </ul>
       </section>
       <!-- sectiion 4  -->
@@ -92,23 +88,23 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./img/man.jpg" alt="man" width="264" />
+            <img src="./images/man.jpg" alt="man" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./img/smilingman.jpg" alt="smiling man" width="264" />
+            <img src="./images/smilingman.jpg" alt="smiling man" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./img/woman.jpg" alt="woman" width="264" />
+            <img src="./images/woman.jpg" alt="woman" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
-              src="./img/bearded-smiling-man.jpg"
+              src="./images/bearded-smiling-man.jpg"
               alt="bearded smiling man"
               width="264"
             />
