--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./portfolio.html">Portfolio</a>
         <ul>
           <li>
             <a href="#">Studio</a>
@@ -43,47 +43,92 @@
       <h2 hidden>Portfolio</h2>
       <ul>
         <li>
-          <img src="" alt="" width="360" height="300" />
+          <img
+            src="./images/row1/img.jpg"
+            alt="Banking App Interface Concept"
+            width="360"
+            height="300"
+          />
           <h3>Banking App Interface Concept</h3>
           <p>App</p>
         </li>
         <li>
-          <img src="" alt="" width="360" height="300" />
+          <img
+            src="./images/row1/img-1.jpg"
+            alt="Cashless Payment"
+            width="360"
+            height="300"
+          />
           <h3>Cashless Payment</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="" alt="" width="360" height="300" />
+          <img
+            src="./images/row1/img-2.jpg"
+            alt="Monitor and phone display"
+            width="360"
+            height="300"
+          />
           <h3>Meditation App</h3>
           <p>App</p>
         </li>
         <li>
-          <img src="" alt="" width="360" height="300" />
+          <img
+            src="./images/row2/img.jpg"
+            alt="man holding the steering wheel of a car, taxi service"
+            width="360"
+            height="300"
+          />
           <h3>Taxi Service</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="" alt="" width="360" height="300" />
+          <img
+            src="./images/row2/img-1.jpg"
+            alt="screenshots of the display of various illustration options"
+            width="360"
+            height="300"
+          />
           <h3>Screen Illustrations</h3>
           <p>Design</p>
         </li>
         <li>
-          <img src="" alt="" width="360" height="300" />
+          <img
+            src="./images/row2/img-2.jpg"
+            alt="A smiling girl takes an online course"
+            width="360"
+            height="300"
+          />
           <h3>Online Courses</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="" alt="" width="360" height="300" />
+          <img
+            src="./images/row3/img.jpg"
+            alt="Instagram Stories Concept"
+            width="360"
+            height="300"
+          />
           <h3>Instagram Stories Concept</h3>
           <p>Design</p>
         </li>
         <li>
-          <img src="" alt="" width="360" height="300" />
+          <img
+            src="./images/row3/img-1.jpg"
+            alt="A woman carries vegetables in a bag"
+            width="360"
+            height="300"
+          />
           <h3>Organic Food</h3>
           <p>Web Site</p>
         </li>
         <li>
-          <img src="" alt="" width="360" height="300" />
+          <img
+            src="./images/row3/img-2.jpg"
+            alt="A person makes a drawing on a cup of coffee"
+            width="360"
+            height="300"
+          />
           <h3>Fresh Coffee</h3>
           <p>Web Site</p>
         </li>
