--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="#">Studio</a>
           </li>
           <li>
-            <a href="#">Portfolio</a>
+            <a href="./portfolio.html">Portfolio</a>
           </li>
           <li>
             <a href="#">Contacts</a>
@@ -24,8 +24,8 @@
       </nav>
       <address>
         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
