--- a/portfolio.html
+++ b/portfolio.html
@@ -8,13 +8,13 @@
   <body>
     <header>
       <nav>
-        <a href="./portfolio.html">Portfolio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="#">Studio</a>
           </li>
           <li>
-            <a href="#">Portfolio</a>
+            <a href="./portfolio.html">Portfolio</a>
           </li>
           <li>
             <a href="#">Contacts</a>
