--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="./index.html">WebStudio</a>
         <ul>
           <li>
-            <a href="#">Studio</a>
+            <a href="./index.html">Studio</a>
           </li>
           <li>
             <a href="./portfolio.html">Portfolio</a>
