--- a/index.html
+++ b/index.html
@@ -5,36 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="top-line" href="./index.html">WebStudio</a>
         <ul>
           <li>
-            <a href="./index.html">Studio</a>
+            <a class="top-line" href="./index.html">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html">Portfolio</a>
+            <a class="top-line" href="./portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a href="#">Contacts</a>
+            <a class="top-line" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a class="top-line" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="top-line" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
       <!-- section 1 -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero-bg">
+        <h1 class="hero-text">Effective Solutions for Your Business</h1>
+        <button class="hero-button" type="button">
+          <span class="bt-text">Order Service</span>
+        </button>
       </section>
       <!-- section 2 -->
       <section>
