--- a/portfolio.html
+++ b/portfolio.html
@@ -4,27 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="top-line" href="./index.html">WebStudio</a>
         <ul>
           <li>
-            <a href="./index.html">Studio</a>
+            <a class="top-line" href="./index.html">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html">Portfolio</a>
+            <a class="top-line" href="./portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a href="#">Contacts</a>
+            <a class="top-line" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a class="top-line" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="top-line" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
