--- a/index.html
+++ b/index.html
@@ -5,48 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <!-- Custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
-    <header>
-      <nav>
-        <a class="top-line" href="./index.html">WebStudio</a>
-        <ul>
-          <li>
-            <a class="top-line" href="./index.html">Studio</a>
+  <body class="page">
+    <header class="header">
+      <nav class="header-nav">
+        <a class="header-logo" href="./index.html">WebStudio</a>
+        <ul class="header-list">
+          <li class="header-item">
+            <a class="header-link" href="./index.html">Studio</a>
           </li>
-          <li>
-            <a class="top-line" href="./portfolio.html">Portfolio</a>
+          <li class="header-item">
+            <a class="header-link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li>
-            <a class="top-line" href="#">Contacts</a>
+          <li class="header-item">
+            <a class="header-link" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li>
-            <a class="top-line" href="mailto:info@devstudio.com"
+      <address class="header-info">
+        <ul class="header-info-list">
+          <li lass="header-info-item">
+            <a lass="header-info-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a class="top-line" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li lass="header-info-item">
+            <a lass="header-info-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
-
-    <main>
+    <main class="main">
       <!-- section 1 -->
-      <section class="hero-bg">
-        <h1 class="hero-text">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">
-          <span class="bt-text">Order Service</span>
+      <section class="section hero">
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">
+          <span>Order Service</span>
         </button>
       </section>
       <!-- section 2 -->
-      <section>
+      <section class="section benefits">
         <h2>Our benefits</h2>
         <ul>
           <li>
@@ -80,7 +80,7 @@
         </ul>
       </section>
       <!-- section 3 -->
-      <section>
+      <section class="section doing">
         <h2>What are we doing</h2>
         <ul>
           <li><img src="./images/display.jpg" alt="display" width="360" /></li>
@@ -94,8 +94,8 @@
           <li><img src="./images/phone.jpg" alt="phone" width="360" /></li>
         </ul>
       </section>
-      <!-- sectiion 4  -->
-      <section>
+      <!-- section 4  -->
+      <section class="section team">
         <h2>Our Team</h2>
         <ul>
           <li>
@@ -125,7 +125,7 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
