--- a/portfolio.html
+++ b/portfolio.html
@@ -9,28 +9,28 @@
   <body>
     <header>
       <nav>
-        <a class="top-line" href="./index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
-            <a class="top-line" href="./index.html">Studio</a>
+            <a href="./index.html">Studio</a>
           </li>
           <li>
-            <a class="top-line" href="./portfolio.html">Portfolio</a>
+            <a href="./portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a class="top-line" href="#">Contacts</a>
+            <a href="#">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a class="top-line" href="mailto:info@devstudio.com"
+            <a  href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="top-line" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
