--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       </nav>
       <address class="header-info">
         <ul class="header-info-list">
-          <li lass="header-info-item">
-            <a lass="header-info-link" href="mailto:info@devstudio.com"
+          <li class="header-info-item">
+            <a class="header-info-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
@@ -40,9 +40,9 @@
     <main class="main">
       <!-- section 1 -->
       <section class="section hero">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">
-          <span>Order Service</span>
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-btn" type="button">
+          <span class="hero-btn-text">Order Service</span>
         </button>
       </section>
       <!-- section 2 -->
