--- a/portfolio.html
+++ b/portfolio.html
@@ -6,31 +6,31 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li>
-            <a href="./index.html">Studio</a>
+  <body class="page">
+    <header class="header">
+      <nav class="header-nav">
+        <a class="header-logo" href="./index.html">WebStudio</a>
+        <ul class="header-list">
+          <li class="header-item">
+            <a class="header-link" href="./index.html">Studio</a>
           </li>
-          <li>
-            <a href="./portfolio.html">Portfolio</a>
+          <li class="header-item">
+            <a class="header-link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li>
-            <a href="#">Contacts</a>
+          <li class="header-item">
+            <a class="header-link" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li>
-            <a  href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+      <address class="header-info">
+        <ul class="header-info-list">
+          <li class="header-info-item">
+            <a class="header-info-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a>
           </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="header-info-item">
+            <a class="header-info-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
