--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <!-- Custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo" href="./index.html">WebStudio</a>
+        <a class="header-logo" href="./index.html"
+          >Web<span class="logo">Studio</span></a
+        >
         <ul class="header-list">
           <li class="header-item">
             <a class="header-link" href="./index.html">Studio</a>
@@ -31,23 +40,23 @@
               >info@devstudio.com</a
             >
           </li>
-          <li lass="header-info-item">
-            <a lass="header-info-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="header-info-item">
+            <a class="header-info-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
     <main class="main">
       <!-- section 1 -->
-      <section class="section hero">
+      <section class="section-hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn" type="button">
-          <span class="hero-btn-text">Order Service</span>
-        </button>
+        <button class="hero-btn" type="button">Order Service</button>
       </section>
       <!-- section 2 -->
       <section class="section benefits">
-        <h2>Our benefits</h2>
+        <h2 hidden>Our benefits</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -95,7 +104,7 @@
         </ul>
       </section>
       <!-- section 4  -->
-      <section class="section team">
+      <section class="section-team">
         <h2>Our Team</h2>
         <ul>
           <li>
@@ -126,8 +135,10 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a class="header-logo" href="./index.html"
+        >Web<span class="logo-ftr">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
