--- a/portfolio.html
+++ b/portfolio.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- Custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo" href="./index.html">WebStudio</a>
+        <a class="header-logo" href="./index.html">Web<span class="logo">Studio</span></a>
         <ul class="header-list">
           <li class="header-item">
             <a class="header-link" href="./index.html">Studio</a>
@@ -37,12 +42,13 @@
     </header>
     <!-- Button section -->
     <section>
+      <h1 hidden>Our works</h1>
       <ul>
-        <li><button type="button">All</button></li>
-        <li><button type="button">Web Site</button></li>
-        <li><button type="button">App</button></li>
-        <li><button type="button">Design</button></li>
-        <li><button type="button">Marketing</button></li>
+        <li><button class="hero-btn" type="button">All</button></li>
+        <li><button class="hero-btn" type="button">Web Site</button></li>
+        <li><button class="hero-btn" type="button">App</button></li>
+        <li><button class="hero-btn" type="button">Design</button></li>
+        <li><button class="hero-btn" type="button">Marketing</button></li>
       </ul>
     </section>
     <!-- Portfolio section -->
@@ -141,9 +147,9 @@
         </li>
       </ul>
     </section>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="header-logo" href="./index.html">Web<span class="logo-ftr">Studio</span></a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
