--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li class="header-item">
             <a class="header-link" href="./index.html">Studio</a>
           </li>
-          <li class="header-item">
+          <li class="header-item"></li>
             <a class="header-link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
