--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
         </ul>
       </address>
     </header>
-    <!-- Button section -->
+    <main>
     <section>
       <h1 hidden>Our works</h1>
       <ul>
@@ -50,9 +50,7 @@
         <li><button class="hero-btn" type="button">Design</button></li>
         <li><button class="hero-btn" type="button">Marketing</button></li>
       </ul>
-    </section>
-    <!-- Portfolio section -->
-    <section>
+    
       <h2 hidden>Portfolio</h2>
       <ul>
         <li>
@@ -153,6 +151,7 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+    </main>
     </footer>
   </body>
 </html>
