--- a/goit-markup-hw-02/goit-markup-hw-02/index.html
+++ b/goit-markup-hw-02/goit-markup-hw-02/index.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-    href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
-    rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
     />
     <!-- Custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
@@ -25,7 +25,7 @@
           <li class="header-item">
             <a class="header-link" href="./index.html">Studio</a>
           </li>
-          <li class="header-item">
+          <li class="header-item"></li>
             <a class="header-link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
@@ -56,32 +56,32 @@
       </section>
       <!-- section 2 -->
       <section class="section benefits">
-        <h2 hidden class="section-title">Our benefits</h2>
-        <ul class="benefits-list">
-          <li class="benefits-item">
-            <h3 class="title">Strategy</h3>
-            <p class="text">
+        <h2 hidden>Our benefits</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="benefits-item">
-            <h3 class="title">Punctuality</h3>
-            <p class="text">
+          <li>
+            <h3>Punctuality</h3>
+            <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
-          </li class="benefits-item">
-          <li class="benefits-item">
-            <h3 class="title">Diligence</h3>
-            <p class="text">
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li class="benefits-item">
-            <h3 class="title">Technologies</h3>
-            <p class="text">
+          <li>
+            <h3>Technologies</h3>
+            <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -90,46 +90,46 @@
       </section>
       <!-- section 3 -->
       <section class="section doing">
-        <h2 class="section-title">What are we doing</h2>
-        <ul class="section-doing-list">
-          <li class="doing-img"><img src="./images/display.jpg" alt="display" width="360" /></li>
-          <li class="doing-img">
+        <h2>What are we doing</h2>
+        <ul>
+          <li><img src="./images/display.jpg" alt="display" width="360" /></li>
+          <li>
             <img
               src="./images/phone-display.jpg"
               alt="phone-display"
               width="360"
             />
           </li>
-          <li class="doing-img"><img src="./images/phone.jpg" alt="phone" width="360" /></li>
+          <li><img src="./images/phone.jpg" alt="phone" width="360" /></li>
         </ul>
       </section>
       <!-- section 4  -->
       <section class="section-team">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
+        <h2>Our Team</h2>
+        <ul>
+          <li>
             <img src="./images/man.jpg" alt="man" width="264" />
-            <h3 class="title">Mark Guerrero</h3>
-            <p class="text">Product Designer</p>
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
-          <li class="team-item">
+          <li>
             <img src="./images/smilingman.jpg" alt="smiling man" width="264" />
-            <h3 class="title">Tom Ford</h3>
-            <p class="text">Frontend Developer</p>
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
-          <li class="team-item">
+          <li>
             <img src="./images/woman.jpg" alt="woman" width="264" />
-            <h3 class="title">Camila Garcia</h3>
-            <p class="text">Marketing</p>
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
-          <li class="team-item">
+          <li>
             <img
               src="./images/bearded-smiling-man.jpg"
               alt="bearded smiling man"
               width="264"
             />
-            <h3 class="title">Daniel Wilson</h3>
-            <p class="text">UI Designer</p>
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
