--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
             <a class="header-link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
-            <a class="header-link" href="#">Contacts</a>
+            <a class="header-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -51,97 +51,97 @@
         <li><button class="hero-btn" type="button">Marketing</button></li>
       </ul>
     
-      <h2 hidden>Portfolio</h2>
-      <ul>
-        <li>
+      <h2 class="section-title" hidden>Portfolio</h2>
+      <ul class="portfolio-list">
+        <li class="portfolio-item">
           <img
             src="./images/row1/img.jpg"
             alt="Banking App Interface Concept"
             width="360"
             height="300"
           />
-          <h3>Banking App Interface Concept</h3>
-          <p>App</p>
+          <h3 class="title">Banking App Interface Concept</h3>
+          <p class="text">App</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <img
             src="./images/row1/img-1.jpg"
             alt="Cashless Payment"
             width="360"
             height="300"
           />
-          <h3>Cashless Payment</h3>
-          <p>Marketing</p>
+          <h3 class="title">Cashless Payment</h3>
+          <p class="text">Marketing</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <img
             src="./images/row1/img-2.jpg"
             alt="Monitor and phone display"
             width="360"
             height="300"
           />
-          <h3>Meditation App</h3>
-          <p>App</p>
+          <h3 class="title">Meditation App</h3>
+          <p class="text">App</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <img
             src="./images/row2/img.jpg"
             alt="man holding the steering wheel of a car, taxi service"
             width="360"
             height="300"
           />
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
+          <h3 class="title">Taxi Service</h3>
+          <p class="text">Marketing</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <img
             src="./images/row2/img-1.jpg"
             alt="screenshots of the display of various illustration options"
             width="360"
             height="300"
           />
-          <h3>Screen Illustrations</h3>
-          <p>Design</p>
+          <h3 class="title">Screen Illustrations</h3>
+          <p class="text">Design</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <img
             src="./images/row2/img-2.jpg"
             alt="A smiling girl takes an online course"
             width="360"
             height="300"
           />
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
+          <h3 class="title">Online Courses</h3>
+          <p class="text">Marketing</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <img
             src="./images/row3/img.jpg"
             alt="Instagram Stories Concept"
             width="360"
             height="300"
           />
-          <h3>Instagram Stories Concept</h3>
-          <p>Design</p>
+          <h3 class="title">Instagram Stories Concept</h3>
+          <p class="text">Design</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <img
             src="./images/row3/img-1.jpg"
             alt="A woman carries vegetables in a bag"
             width="360"
             height="300"
           />
-          <h3>Organic Food</h3>
-          <p>Web Site</p>
+          <h3 class="title">Organic Food</h3>
+          <p class="text">Web Site</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <img
             src="./images/row3/img-2.jpg"
             alt="A person makes a drawing on a cup of coffee"
             width="360"
             height="300"
           />
-          <h3>Fresh Coffee</h3>
-          <p>Web Site</p>
+          <h3 class="title">Fresh Coffee</h3>
+          <p class="text">Web Site</p>
         </li>
       </ul>
     </section>
