--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a class="header-link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
-            <a class="header-link" href="#">Contacts</a>
+            <a class="header-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
