--- a/portfolio.html
+++ b/portfolio.html
@@ -51,11 +51,11 @@
       <section class="section-portfolio">
         <h1 hidden>Our works</h1>
         <ul class="portfolio-btn list">
-          <li><button class="portfoli-btn" type="button">All</button></li>
-          <li><button class="portfoli-btn" type="button">Web Site</button></li>
-          <li><button class="portfoli-btn" type="button">App</button></li>
-          <li><button class="portfoli-btn" type="button">Design</button></li>
-          <li><button class="portfoli-btn" type="button">Marketing</button></li>
+          <li><button class="btn-portfolio" type="button">All</button></li>
+          <li><button class="btn-portfolio" type="button">Web Site</button></li>
+          <li><button class="btn-portfolio" type="button">App</button></li>
+          <li><button class="btn-portfolio" type="button">Design</button></li>
+          <li><button class="btn-portfolio" type="button">Marketing</button></li>
         </ul>
 
         <ul class="portfolio list">
